--- a/solution/03/package.json
+++ b/solution/03/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "open": "cypress open"
   },
   "dependencies": {
     "cypress": "^12.5.1",
