chore: add scripts for cypress

--- a/solution/06/package.json
+++ b/solution/06/package.json
@@ -10,7 +10,9 @@
     "start": "remix-serve build",
     "typecheck": "tsc",
     "test": "dotenv -e .env npx prisma db push && concurrently \"npm run dev:css\" \"dotenv -e .env remix dev\" \"dotenv -e .env cypress run\"",
-    "test:open": "dotenv -e .env npx prisma db push && concurrently \"npm run dev:css\" \"dotenv -e .env remix dev\" \"dotenv -e .env cypress open\""
+    "test:open": "dotenv -e .env npx prisma db push && concurrently \"npm run dev:css\" \"dotenv -e .env remix dev\" \"dotenv -e .env cypress open\"",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "dependencies": {
     "@prisma/client": "^4.3.1",
